--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ background-image: url("./public/wp4615518-terminal-wallpapers.jpg");
 background-position: center;
 background-size:cover;
 background-repeat: repeat;
-
+height: 100vh;
+width: 100vw;
 }
 h1{
     padding: 25px 0px 10px ;
@@ -22,6 +23,8 @@ h2{
 .img-container{
     display: flex;
     justify-content:space-around;
+    width: 100%;
+    
 }
 button{
     background-color: rgb(197, 216, 255);
@@ -49,4 +52,11 @@ button:hover{
     border-radius: 200px;
     background-color: rgba(240, 248, 255, 0.718);
     
+}
+img{
+
+  width: 50%;
+}
+h3{
+    text-wrap:wrap;
 }
