--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ background-position: center;
 background-size:cover;
 background-repeat: repeat;
 height: 100vh;
-width: 100vw;
+
 }
 h1{
     padding: 25px 0px 10px ;
 }
 h2{
-    padding: 35px;
+    margin: 35px;
+    height: 50px;
 }
 .img-container{
     display: flex;
@@ -56,7 +57,11 @@ button:hover{
 img{
 
   width: 50%;
+ 
 }
 h3{
     text-wrap:wrap;
+    margin-bottom: 30px;
+    width: auto;
+    height: 50px;
 }
